PYIC-7878: switch CRI connections, signer key IDs, and issuer mapping to typed Config (remove ParameterStore lookups)
Read CRI connection configs from configuration.credentialIssuers.*.connections (no getParametersByPrefix).
Update getIssuerCris() to use typed connections’ componentId.
Replace SignerFactory lookups with self.signingKeyId/self.sisSigningKeyId (UUID); keep local JWK path.
Adjust tests to mock typed config (e.g. client validRedirectUrls, core VTM claim, return codes) instead of getParameter.